add class and names to buttons

--- a/rpsUI/index.html
+++ b/rpsUI/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <button name = "rock">Rock</button>
-        <button name = "paper">Paper</button>
-        <button name = "scissors">Scissors</button>
+        <button class="button" name="rock">Rock</button>
+        <button class="button" name="paper">Paper</button>
+        <button class="button" name="scissors">Scissors</button>
 
     </div>
     
