Add yes/no buttons and hide game

--- a/rpsUI/index.html
+++ b/rpsUI/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <div id="container">
-        <button class="button" name="rock">Rock</button>
-        <button class="button" name="paper">Paper</button>
-        <button class="button" name="scissors">Scissors</button>
-
+        <div id="btns">
+        <button class="gameBtn" name="rock">Rock</button>
+        <button class="gameBtn" name="paper">Paper</button>
+        <button class="gameBtn" name="scissors">Scissors</button>
+            </div>
     </div>
     
 </body>
