--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <div id="btns">
+        <button class="gameBtn" name="rock">Rock</button>
+        <button class="gameBtn" name="paper">Paper</button>
+        <button class="gameBtn" name="scissors">Scissors</button>
+            </div>
+    </div>
     
 </body>
 </html>
